marketplace-vendor-app/resources/platform-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        vault.hashicorp.com/agent-configmap: "marketplace-vendor-platform-secret-configmap"
        configmap.reloader.stakater.com/reload: "marketplace-vendor-platform-cm, marketplace-vendor-deployment-cm, marketplace-vendor-platform-secret-configmap"
    spec:
      containers:
        - name: vc-platform-web
          volumeMounts:
            - mountPath: "/opt/virtocommerce/platform/modules"
              name: modules-data
            - mountPath: "/opt/virtocommerce/platform/wwwroot/cms-content"
              name: cms-content-data
      volumes:
      - name: cms-content-data
        persistentVolumeClaim:
          claimName: marketplace-operator-cms-content-volume
