marketplace-vendor-app/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-http
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: demo-marketplace-operator-https-redirect@kubernetescrd
spec:
  rules:
  - host: $(VC_PLATFORM_SERVICE).$(VC_NAMESPACE).govirto.com
    http:
      paths:
      - backend:
          serviceName: platform
          servicePort: 80
        path: /
